<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.Unal_ReforAccion_YAML.ScrollViewContent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_app"
        tools:context=".ui.RegisterActivity">

        <include android:id="@+id/imageView" layout="@layout/image_principal_app"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_margin="30dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewUser"
            style="@style/Theme.Unal_ReforAccion_YAML.PrimaryButton"
            android:layout_marginTop="80dp"
            android:text="@string/btn_tittle_new_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            style="@style/Theme.Unal_ReforAccion_YAML.PrimaryButton"
            android:layout_marginTop="80dp"
            android:text="@string/btn_tittle_new_user_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNewUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>